--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>New York City Blog</title>
 </head>
 <body>
-    
+    <nav>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#media">Media</a></li>
+        <li><a href="#about">About</a></li>
+    </nav>
 
 
 
