--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <li><a href="#media">Media</a></li>
         <li><a href="#about">About</a></li>
     </nav>
+    <header>
+        <h1>
+           New York City 
+        </h1>
+    </header>
 
+    
 
 
     <footer id = "about">
