Added main and section tags, which will contain all data on this page.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
         </h1>
     </header>
 
-    
+    <main>
+        <section id = "blog">
+            
+        </section>
+    </main>
+
+
 
 
     <footer id = "about">
         <p> Posted by: Greg Schuman </p>
-        <p> Contact information: <a href="Blogger@NYC.com">Email</a></p>
+        <p> Contact information: <link a href="greg.c.schuman@gmail.com">Email</link></p>
     </footer>
 </body>
 </html>
