--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
         </section>
         <figure>
-            <img src = "https://content.codecademy.com/courses/Semantic%20HTML/statue-of-liberty.jpeg" />
+            <img class = "responsive" src = "https://content.codecademy.com/courses/Semantic%20HTML/statue-of-liberty.jpeg" />
           <figcaption>
             This is the Statue of Liberty, a popular tourist attraction located on Liberty Island.
           </figcaption>
@@ -55,10 +55,10 @@
                     While the view in the city is beautiful, the sounds are not as lovely. Below you'll see an example of the view and the sounds you'll deal with in NYC on a daily basis.
                 </p>  
             </article>
-            <video src = "https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4" controls>
+            <video class = "responsive" src = "https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4" controls>
             </video>
-            <embed src = "https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline.jpeg">
-            <audio src = "https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov"controls></audio>
+            <embed class = "responsive" src = "https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline.jpeg">
+            <audio class = "responsive" src = "https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov"controls></audio>
         </section>
 
     </main>
